--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,25 @@
 
     <fragment
         android:id="@+id/fragment_1"
+        android:name="com.example.currency_test.Currency_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="400dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:name="com.example.currency_test.Currency_fragment"
         tools:layout="@layout/fragment_currency_fragment" />
 
+    <fragment
+        android:id="@+id/fragment_2"
+        android:name="com.example.currency_test.Stonks_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_1"
+        tools:layout="@layout/fragment_stonks_main" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
