--- a/app/src/main/res/layout/fragment_stonks_main.xml
+++ b/app/src/main/res/layout/fragment_stonks_main.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/curr_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Currency_fragment">
-    <Button
-        android:layout_width="wrap_content"
-        android:id="@+id/button_1"
-        android:layout_height="wrap_content"
-        android:text="Result"
-        android:onClick="GetResult"
-        />
+    tools:context=".Stonks_main">
 
     <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
