--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    <!--
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_test"
+        android:text="test_button"
+        android:onClick="GetResult"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+        -->
 
 
     <fragment
@@ -20,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout="@layout/fragment_currency_fragment" />
 
-    <fragment
+         <fragment
         android:id="@+id/fragment_2"
         android:name="com.example.currency_test.Stonks_main"
         android:layout_width="wrap_content"
@@ -30,5 +42,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_1"
         tools:layout="@layout/fragment_stonks_main" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
