--- a/app/src/main/res/layout/fragment_currency_fragment.xml
+++ b/app/src/main/res/layout/fragment_currency_fragment.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Currency_fragment">
+
     <Button
-        android:layout_width="wrap_content"
         android:id="@+id/button_1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Result"
-        />
+        android:text="@string/Request_currency"
+        style="@style/Request_style" />
 
 
 </FrameLayout>
