--- a/app/src/main/res/layout/fragment_currency_fragment.xml
+++ b/app/src/main/res/layout/fragment_currency_fragment.xml
@@ -8,10 +8,14 @@
 
     <Button
         android:id="@+id/button_1"
+        style="@style/Request_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Request_currency"
-        style="@style/Request_style" />
+        android:padding="0dp"
+        android:paddingStart="@dimen/small_padding"
+        android:paddingRight="@dimen/small_padding"
+        android:paddingBottom="@dimen/small_padding"
+        android:text="@string/Request_currency" />
 
 
 </FrameLayout>
