--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:navGraph = "@navigation/navigation"
+        app:navGraph ="@navigation/navigation"
         app:defaultNavHost ="true"
         tools:layout="@layout/fragment_currency_fragment" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_2"
-        android:name="com.example.currency_test.Stonks_main"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
