--- a/app/src/main/res/layout/fragment_currency_fragment.xml
+++ b/app/src/main/res/layout/fragment_currency_fragment.xml
@@ -11,11 +11,20 @@
         style="@style/Request_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="0dp"
         android:paddingStart="@dimen/small_padding"
-        android:paddingRight="@dimen/small_padding"
-        android:paddingBottom="@dimen/small_padding"
-        android:text="@string/Request_currency" />
+        android:paddingEnd="@dimen/small_padding"
+        android:text="@string/Request_currency"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="180dp"
+        />
+
+    <Button
+        android:id="@+id/button_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="clickme"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"/>
 
 
 </FrameLayout>
